<resources>
    <string name="app_name">Bravo!</string>
    <string name="back_to_top">Back</string>
    <string name="fb_app_id">314546048706613</string>
    <string name="result_not_found">Result not found</string>
    <string name="network_unvailable">Network is not available</string>
    <string name="failed_to_conect_server">Failed to connect to server</string>
    <string name="unknown">Unknown</string>
    <string name="welcome_alert_title">Welcome to Bravo!</string>
    <string name="welcome_alert_text">First let\' take a look\n at the latest post on Bravo!</string>
    <string name="picture_share_fb">https://c4.staticflickr.com/4/3923/15229819096_db573bc162_t.jpg</string>
    <string name="welcome_alert_start">Start</string>
    <string name="policy_url">https://sharebravo.com/rule/en</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">Location update error. code %1$d message %2$s</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="poor_connection">Poor connection</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="no_address_found">No address found for location</string>
    <string name="intro_logo_label">The shop app \nthat\'s taking the \nworld by storm!</string>
    <string name="non_exist_mailaddress_error_text">The email address you entered is not registered</string>
    <string name="submit_forgot_mail_title">An email was sent to %s with instructions on how to reset you password.</string>
    <string name="submit_forgot_mail_text">Click on the link in the email to proceed.</string>
    <string name="login_error_wrong">Please check your email address and password</string>
    <string name="login_error_same">A user with this info has already been registered</string>
    <string name="login_error_disconnect">Unable to connect.\nPlease try again</string>
    <string name="forgot_submit">Reset password</string>
    <string name="intro_signup">Register</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="signup_twitter">Sign up with Twitter</string>
    <string name="signup_foursquare">Sign up with Foursquare</string>
    <string name="signup_bravo">Sign up with Bravo!</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="login_4square">Login with Foursquare</string>
    <string name="login_bravo">Login with Bravo!</string>
    <string name="or">or</string>
    <string name="pick_image">Pick An Image</string>
    <string name="text_new_user_registration">New User Registration</string>
    <string name="text_user_name">Name</string>
    <string name="forgot_mailaddress">Email address</string>
    <string name="pass_word">Password</string>
    <string name="login_bravo_forgot_password">Forgot password?</string>
    <string name="intro_login">Login</string>
    <string name="login_error_title">Login Failure</string>
    <string name="done">Done</string>
    <string name="setup_terms">Terms of Service</string>
    <string name="signup_terms">By signing up,you agree to\n the Terms of Service.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="email_is_empty">Please enter your Email address</string>
    <string name="signup_bravo_regex_error">Please enter a valid Email address</string>
    <string name="password_is_empty">Please enter your Password</string>
    <string name="signup_bravo_password_error">Your password must be at least 8 characters.</string>
    <string name="sharedtext_is_empty">Please enter text to share.</string>
    <string name="username_is_empty">Please enter your Name</string>
    <string name="username_password_not_valid">User name or password not correct</string>
    <string name="tab_home">Home</string>
    <string name="tab_feed">Network</string>
    <string name="feed_nothing_search_button">Search</string>
    <string name="tab_mydata">My Data</string>
    <string name="home_header_section_news">News</string>
    <string name="home_header_section_new">Recent Posts</string>
    <string name="home_notification">Notifications</string>
    <string name="btn_back">Back</string>
    <string name="mydata_bar_button_setup">Settings</string>
    <string name="friends_search_input">Search for friends</string>
    <string name="search_search_bar">Search for spots</string>
    <string name="search_header_section_restaurant">Spots</string>
    <string name="search_location_unable_title">Search local spots?</string>
    <string name="search_location_unable_sub">You can enable your phone\'s location services in your privacy settings.</string>
    <string name="delete_bravo_info_title">Are you sure you want to delete your account?</string>
    <string name="delete_bravo_info_text">If you choose to continue, all your Bravo data will be permanently deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setup_account_table_header">Account</string>
    <string name="setup_edit_profile">Edit profile</string>
    <string name="setup_friends_table_header">Friends</string>
    <string name="setup_search_friends">Share with friends</string>
    <string name="share">Share</string>
    <string name="setup_share_sns_facebook">Post on Facebook</string>
    <string name="setup_share_sns_twitter">Post on Twitter</string>
    <string name="setup_share_sns_foursquare">Post on Foursquare</string>
    <string name="setup_notification_comment">Comment Notifications</string>
    <string name="setup_notification_follow">Follow Notifications</string>
    <string name="setup_notification_mylist">Favourite Notifications</string>
    <string name="setup_notification_total_bravo">Total Bravo Notifications</string>
    <string name="setup_notification_bravo">Bravo Notifications</string>
    <string name="setup_resignation">Delete my account</string>
    <string name="input_about_me_placeholder">About yourself.</string>
    <string name="friends_search_facebook">Search for Facebook friends</string>
    <string name="friends_search_twitter">Search for Twitter friends</string>
    <string name="friends_search_foursquare">Search for Foursquare friends</string>
    <string name="friends_search_recommend_user"> Recommended users</string>
    <string name="friends_search_result_header_section"> %s Friends</string>
    <string name="friends_search_result_nothing">None of your %s friends seem to be using Bravo!.</string>
    <string name="friends_search_no_connect">By connecting to %1$s, you can search for all of your %2$s friends.</string>
    <string name="friends_search_twitter_connect">Connect to Twitter</string>
    <string name="friends_search_facebook_connect">Connect to Facebook</string>
    <string name="friends_search_foursquare_connect">Connect to Foursquare</string>
    <string name="deleted_user_full_name">Deleted User</string>
    <string name="store_info_tel_restaurant">Call Spot</string>
    <string name="store_info_call_check">Call %s?</string>
    <string name="store_info_view_map">View Map</string>
    <string name="store_info_fan_many">Top Fans</string>
    <string name="follow">Follow</string>
    <string name="mydata_mylist">Favorites</string>
    <string name="bravo_info_like"> Like</string>
    <string name="bravo_info_liked">Liked</string>
    <string name="bravo_info_saved">Saved</string>
    <string name="bravo_info_save">Save</string>
    <string name="save_pics">Save Photo</string>
    <string name="save_picture_complete">Photo saved</string>
    <string name="delete_picture_alert_title">Remove Photo</string>
    <string name="delete_picture_alert_text">Would you remove this photo?</string>
    <string name="delete_picture_complete">Removed photo</string>
    <string name="delete_picture_indicator">Removing photo...</string>
    <string name="cancel_save_pics">Cancel</string>
    <string name="bravo_info_share">Share</string>
    <string name="more_comment">View previous comments...</string>
    <string name="comment_text_field">Write a comment ...</string>
    <string name="report_button_bravo">Report inappropriate bravo</string>
    <string name="report_button_spot">Report inappropriate spot</string>
    <string name="report_alert_title">Report inappropriate content</string>
    <string name="report_alert_text_for_bravo">Would you like to report this bravo for inappropriate content?</string>
    <string name="report_alert_text_for_image">Would you like to report this photo for inappropriate content?</string>
    <string name="report_alert_text_for_spot">Would you like to report this spot for inappropriate content?</string>
    <string name="comment_submit">Post</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="share_action_facebook">Share on Facebook</string>
    <string name="share_action_twitter">Share on Twitter</string>
    <string name="share_action_line">Share on Line</string>
    <string name="share_complete_facebook">Shared on Facebook</string>
    <string name="share_complete_twitter">Shared on Twitter</string>
    <string name="input_share_placeholder">About this bravo.</string>
    <string name="share_cancel">Cancel</string>
    <string name="alert_remove_follow_title">Stop following this user?</string>
    <string name="report_alert_title_finish">You have submitted a report for inappropriate content.</string>
    <string name="report_alert_text_finish">Thank you for your report.</string>
    <string name="report_alert_title_error">Report failed.</string>
    <string name="report_alert_text_error">Please check your internet connection and try again.</string>
    <string name="dialog_report_close">Close</string>
    <string name="btn_ok">OK</string>
    <string name="profile_follow_alert">You are following %s!</string>
    <string name="share_bravo_on_sns_text">Share %s Bravos</string>
    <string name="search_how_many_bravo">%s Bravo</string>
    <string name="search_how_many_bravos">%s Bravos</string>
    <string name="share_indicator">Sharing...</string>
    <string name="mydata_bravo_many">Bravos</string>
    <string name="total_0_bravo">0</string>
    <string name="mydata_follow_many">Following</string>
    <string name="following">Following</string>
    <string name="total_0_following">0</string>
    <string name="mydata_follower_many">Fans</string>
    <string name="total_0_fan">0</string>
    <string name="profile_bravomap">Bravo Map</string>
    <string name="profile_your_bravomap">Your Bravo Map</string>
    <string name="profile_put_block">Block</string>
    <string name="profile_put_blocking">Unblock</string>
    <string name="get_user_info_error">Cannot get user info</string>
    <string name="profile_action_take_cover_pic">Take a Picture of cover</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="mylist_tab_near">Sort by location</string>
    <string name="mylist_tab_save">Sort by date</string>
    <string name="bravo_action_alert_no">No</string>
    <string name="bravo_action_alert_yes">Yes</string>
    <string name="bravo_after_complete">Return to Spots</string>
    <string name="text_spot_name">Cộng CaPhe</string>
    <string name="bravo_count">You have already spent a Bravo today so please come back tomorrow!</string>
</resources>