<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/all_corner"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stop_following_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/alert_remove_follow_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/devider_color"
            android:contentDescription="@string/intro_login" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_stop_following_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_left_corner_button"
                android:padding="15dp"
                android:text="@string/bravo_action_alert_no" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/devider_color"
                android:contentDescription="@string/intro_login" />

            <Button
                android:id="@+id/btn_stop_following_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_right_corner_button"
                android:padding="15dp"
                android:text="@string/bravo_action_alert_yes" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>