<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_sns_margin_top" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD9DC" />

        <TextView
            android:id="@+id/text_facebook_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/sns_login_text_view_margin_bottom"
            android:layout_marginLeft="@dimen/sns_login_text_view_margin_left"
            android:layout_marginTop="@dimen/sns_login_text_view_margin_top"
            android:drawableLeft="@drawable/facebook_logo"
            android:gravity="center"
            android:text="@string/signup_facebook"
            android:textColor="@color/black"
            android:textSize="@dimen/size_login_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD9DC" />

        <TextView
            android:id="@+id/text_twitter_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/sns_login_text_view_margin_bottom"
            android:layout_marginLeft="@dimen/sns_login_text_view_margin_left"
            android:layout_marginTop="@dimen/sns_login_text_view_margin_top"
            android:drawableLeft="@drawable/twitter_logo"
            android:gravity="center"
            android:text="@string/signup_twitter"
            android:textColor="@color/black"
            android:textSize="@dimen/size_login_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD9DC" />

        <TextView
            android:id="@+id/text_4square_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/sns_login_text_view_margin_bottom"
            android:layout_marginLeft="@dimen/sns_login_text_view_margin_left"
            android:layout_marginTop="@dimen/sns_login_text_view_margin_top"
            android:drawableLeft="@drawable/foursquare_logo"
            android:gravity="center"
            android:text="@string/signup_foursquare"
            android:textColor="@color/black"
            android:textSize="@dimen/size_login_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_or_magrin_top" >

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_3"
            android:textStyle="bold" />

        <!--
             <ImageView
            android:layout_width="@dimen/layout_or_seperate_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/layout_or_margin_left"
            android:background="@drawable/border"
            android:contentDescription="@string/sign_up_bravo" />
        -->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_sign_up_bravo_margin_top"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_bravo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_up_bravo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_sign_up_bravo_margin_up"
            android:background="@drawable/signup_button"
            android:contentDescription="@string/signup_bravo" />
    </LinearLayout>

</LinearLayout>