<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_background"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/back_button"
            android:text="@string/back_to_top"
            android:textColor="#FFFFFF" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_poor_connection"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/delete_favourite"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/poor_connection"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_search"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/box_search"
            android:gravity="center_vertical" >

            <ImageButton
                android:layout_width="@dimen/search_icon"
                android:layout_height="@dimen/search_icon"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_search" />

            <EditText
                android:id="@+id/txtbox_search_spot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_search_bar"
                android:imeOptions="actionSearch"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/icon_cancel_search"
                android:layout_width="@dimen/cancel_search_icon"
                android:layout_height="@dimen/cancel_search_icon"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_cancel"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.sharebravo.bravo.view.lib.pullrefresh_loadmore.XListView
            android:id="@+id/listview_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.sharebravo.bravo.view.lib.pullrefresh_loadmore.XListView>
    </FrameLayout>

</LinearLayout>